--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <meta name="twitter:image" content="images/Artboard 521x530@1200x630.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+<meta name="google-site-verification" content="MRJ1ONHv8O_YKmwVnGFL8de5Wlx1bciOasAqnQ9Mipc" />
 
 
 
