--- a/Committee.html
+++ b/Committee.html
@@ -5,40 +5,50 @@
 <title>Committee</title>
 <meta name="description" content="लोधा समाज शिक्षा फाउंडेशन
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
-We are dedicated to empower people with the tools and knowledge they need to reach their full potential. " />
-<meta name="keywords" content="Lodha, Samaj, Shiksha, Foundation, Career, Lodhasamaj, Shikshafoundation, Lawvanshi, Lovevanshi, Lowanshi, Education, लोधा, समाज, शिक्षा, फाउंडेशन">
+We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
+">
+<meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation
+">
 <meta name="author" content="Vikas Lawvanshi">
 <meta name="robots" content="index, follow">
 <meta name="language" content="Hindi">
+<meta name="revisit-after" content="1 day">
 
-<!-- Open Graph / Facebook / Whatsapp -->
-<meta property="og:type" content="website" />
-<meta property="og:image" content="images/Artboard 521x530@1200x630.png">
+<meta property="og:title" content="Lodha Samaj Shiksha Foundation ">
+<meta property="og:description" content="लोधा समाज शिक्षा फाउंडेशन
+।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।। We are dedicated to empower people with the tools and knowledge they need to reach their full potential. ">
+<meta property="og:type" content="website">
+<meta property="og:image" content="images/Artboard 640xx.png">
 <meta property="og:image"itemprop="image"content="assets/icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="64x64" href="assets/favicon-64x64.png">
-    <link rel="icon" type="image/png" sizes="120x120" href="assets/favicon-120x120.png">
-    <link rel="icon" type="image/png" sizes="320x320" href="assets/favicon-320x320.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/favicon-500x.png">
-    <link rel="icon" type="image/png" sizes="750x750" href="assets/favicon-750x.png">
-    <link rel="icon" type="image/png" sizes="1000x1000" href="assets/favicon-1000x.png">
-<meta property="og:title" content="Lodha Samaj Shiksha Foundation" />
-<meta property="og:description" content="लोधा समाज शिक्षा फाउंडेशन
-।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
-We are dedicated to empower people with the tools and knowledge they need to reach their full potential. " />
-<meta property="og:image" content="images/Artboard 521x530@1200x630.png">
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="images/Artboard 521x530@1200x630.png">
-<meta property="twitter:title" content="Lodha Samaj Shiksha Foundation" />
-<meta property="twitter:description" content="लोधा समाज शिक्षा फाउंडेशन
-।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
-We are dedicated to empower people with the tools and knowledge they need to reach their full potential. " />
-<meta property="twitter:image" content="images/Artboard 521x530@1200x630.png">
-<meta name="twitter:image" content="images/Artboard 521x530@1200x630.png">
+    <link rel="icon" type="image/png" sizes="114x114" href="assets/Asset114x(Copy).png">
+    <link rel="icon" type="image/png" sizes="152x152" href="assets/Asset152x.png">
+    <link rel="icon" type="image/png" sizes="167x167" href="assets/Asset167x.png">
+	<link rel="icon" type="image/png" sizes="180x180" href="assets/Asset180x.png">
+	<link rel="icon" type="image/png" sizes="640x640" href="assets/Artboard 640xx.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Lodha Samaj Shiksha Foundation">
+<meta name="twitter:description" content="लोधा समाज शिक्षा फाउंडेशन
+।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।। We are dedicated to empower people with the tools and knowledge they need to reach their full potential.">
+<meta name="twitter:image" content="images/Artboard 640xx.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<link href="16x16.png" rel="icon" sizes="16x16" type="image/png">
+<link href="32x32.png" rel="icon" sizes="32x32" type="image/png">
+<link href="64x64.png" rel="icon" sizes="64x64" type="image/png">
+<link href="120x120.png" rel="apple-touch-icon" sizes="120x120">
+<link href="320x320.png" rel="apple-touch-icon" sizes="320x320">
+<link href="Artboard 1@0.75x.png" rel="apple-touch-icon" sizes="643x654">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Yatra+One:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gotu:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Arya:400&subset=devanagari&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Comic+Neue:400,700,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Zen+Loop:400&subset=latin-ext&display=swap" rel="stylesheet">
+<link href="css/LN_phase13.css" rel="stylesheet">
+<link href="css/Committee.css" rel="stylesheet">
 </head>
 <body>
 <div id="wb_LayoutGrid1">
@@ -66,7 +76,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image1" style="display:inline-block;width:203px;height:201px;z-index:1;">
-<a href="./index.html"><img src="images/Asset 2@1.5x.png" id="Image1" alt="" width="203" height="202"></a>
+<a href="./index.html"><img src="images/Asset 2@1.5x.png" loading="lazy" id="Image1" alt="" width="203" height="202"></a>
 </div>
 <div id="wb_Text3">
 <p>।। एक कल्पवृक्ष, जो&nbsp; संभावनाओ को साकार करे ।।</p>
@@ -86,7 +96,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="upStickyLayer" style="position:fixed;text-align:center;left:auto;right:20px;top:auto;bottom:20px;width:58px;height:76px;z-index:11;">
 <div id="upStickyLayer_Container" style="width:58px;position:relative;margin-left:auto;margin-right:auto;text-align:left;">
 <div id="wb_Image4" style="position:absolute;left:0px;top:12px;width:58px;height:64px;z-index:5;">
-<a href="./header_masterpage.html#Bookmark1"><img src="images/Artboard 1@0.75x.png" id="Image4" alt="" width="58" height="59"></a></div>
+<a href="./header_masterpage.html#Bookmark1"><img src="images/Artboard 1@0.75x.png" loading="lazy" id="Image4" alt="" width="58" height="59"></a></div>
 <div id="wb_Icon3" style="position:absolute;left:16px;top:0px;width:27px;height:23px;text-align:center;z-index:6;">
 <a href="./header_masterpage.html#Bookmark1"><div id="Icon3"><i class="fa fa-arrow-circle-up"></i></div></a></div>
 </div>
@@ -125,7 +135,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <a href="javascript:void(0)" class="nav-link"><i class="fa fa-users fa-2x">&nbsp;</i><br>About&nbsp;&nbsp;Us<b class="arrow-down"></b></a>
 <input type="checkbox" id="ResponsiveMenu1-submenu-0">
 <ul role="menu">
-<li role="menuitem"><a href="./Who-We-Are.html" class="nav-link"><i class="fa fa-question-circle-o fa-2x">&nbsp;</i>Who&nbsp;We&nbsp;Are(History&nbsp;of&nbsp;Lodha)</a></li>
+<li role="menuitem"><a href="https://hi.wikipedia.org/wiki/%E0%A4%B2%E0%A5%8B%E0%A4%A7%E0%A4%BE" class="nav-link"><i class="fa fa-question-circle-o fa-2x">&nbsp;</i>Who&nbsp;We&nbsp;Are(History&nbsp;of&nbsp;Lodha)</a></li>
 <li role="menuitem"><a href="./vision&mission.html" class="nav-link"><i class="fa fa-hand-peace-o fa-2x">&nbsp;</i>Vision&amp;Mission</a></li>
 <li role="menuitem"><a href="./History-Journey.html" class="nav-link"><i class="fa fa-hourglass-end fa-2x">&nbsp;</i>History&nbsp;of&nbsp;Shiksha&nbsp;Foundation</a></li>
 <li role="menuitem"><a href="./media.html" class="nav-link"><i class="fa fa-file-image-o fa-2x">&nbsp;</i>Media</a></li>
@@ -548,7 +558,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Text21">
-<span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Copyright 2023 © Lodha Samaj Shiksha Foundation<br>All Rights Reserved<br>Designed, Developed &amp; Deployed by Vikas Lawvanshi</span>
+<span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Copyright 2023 © Lodha Samaj Shiksha Foundation<br>All Rights Reserved<br>Designed, Developed &amp; Deployed by <a href="./The-Creator.html" class="style1" title="The Creator">Vikas Lawvanshi</a></span>
 </div>
 </div>
 </div>
@@ -564,8 +574,9 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <link href="https://fonts.googleapis.com/css?family=Yatra+One:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Gotu:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Arya:400&subset=devanagari&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
-<link href="css/LN_phase12.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Comic+Neue:400,700,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Zen+Loop:400&subset=latin-ext&display=swap" rel="stylesheet">
+<link href="css/LN_phase13.css" rel="stylesheet">
 <link href="css/Committee.css" rel="stylesheet">
 <div id="preloader"></div>
 <script src="js/jquery-3.6.4.min.js"></script>
