--- a/The-Creator.html
+++ b/The-Creator.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Job</title>
+<title>The Creator - Vikas Lawvanshi </title>
 <meta name="description" content="लोधा समाज शिक्षा फाउंडेशन
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
 We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
@@ -11,7 +11,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 ">
 <meta name="author" content="Vikas Lawvanshi">
 <meta name="robots" content="index, follow">
-<meta name="language" content="Hindi">
+
 <meta name="revisit-after" content="1 day">
 
 <meta property="og:title" content="Lodha Samaj Shiksha Foundation ">
@@ -35,12 +35,12 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <meta name="twitter:image" content="images/Artboard 640xx.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="16x16.png" rel="icon" sizes="16x16" type="image/png">
-<link href="32x32.png" rel="icon" sizes="32x32" type="image/png">
-<link href="64x64.png" rel="icon" sizes="64x64" type="image/png">
-<link href="120x120.png" rel="apple-touch-icon" sizes="120x120">
-<link href="320x320.png" rel="apple-touch-icon" sizes="320x320">
-<link href="Artboard 1@0.75x.png" rel="apple-touch-icon" sizes="643x654">
+<link href="16x16.png" rel="icon" type="image/png">
+<link href="32x32.png" rel="icon" type="image/png">
+<link href="64x64.png" rel="icon" type="image/png">
+<link href="120x120.png" rel="apple-touch-icon">
+<link href="320x320.png" rel="apple-touch-icon">
+<link href="Artboard 1@0.75x.png" rel="apple-touch-icon">
 <link href="css/font-awesome.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Yatra+One:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Gotu:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
@@ -48,8 +48,8 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <link href="https://fonts.googleapis.com/css?family=Comic+Neue:400,700,300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Zen+Loop:400&subset=latin-ext&display=swap" rel="stylesheet">
 <link href="css/LN_phase13.css" rel="stylesheet">
-<link href="css/Job.css" rel="stylesheet">
-
+<link href="css/The-Creator.css" rel="stylesheet">
+<link rel="stylesheet" href="magnificpopup/magnific-popup.css">
 </head>
 <body>
 <div id="wb_LayoutGrid1">
@@ -188,309 +188,71 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="Bookmark1" style="visibility:hidden;"></div>
 </div>
 
-<div id="wb_LayoutGrid29">
-<div id="LayoutGrid29">
-<div class="row">
+<div id="wb_LayoutGrid7">
+<div id="LayoutGrid7">
 <div class="col-1">
+<div id="wb_Image3" style="display:inline-block;width:100%;height:auto;z-index:15;">
+<img src="images/dp1000x.png" loading="lazy" id="Image3" alt="" width="293" height="432">
+</div>
 </div>
 <div class="col-2">
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid32">
-<div id="LayoutGrid32">
-<div class="row">
-<div class="col-1">
-<div id="wb_LayoutGrid12">
-<div id="LayoutGrid12">
-<div class="row">
-<div class="col-1">
-<div id="wb_LayoutGrid17">
-<div id="LayoutGrid17">
-<div class="row">
-<div class="col-1">
-<div id="wb_Text8">
-<br>
-</div>
-<div id="wb_Heading2" style="display:inline-block;width:100%;z-index:16;">
-<h4 id="Heading2"><a href="./Job.html">Job Portals</a></h4>
-</div>
-<div id="wb_Text10">
-<br>
-</div>
-<div id="wb_Text22">
-<br>
-</div>
-<div id="wb_Text23">
-<p>○&nbsp;<a href="https://www.ncs.gov.in/job-seeker/Pages/Search.aspx">National Career Service </a></p>
-<p>○ <a href="https://www.apprenticeshipindia.gov.in/apprenticeship/opportunity">Apprenticeship india</a></p>
-<p>○ <a href="https://in.indeed.com/">Indeed</a></p>
-<p>○ <a href="https://www.naukri.com/">Naukri</a></p>
-<p>○ <a href="https://in.linkedin.com/jobs">Linkedin</a></p>
-<p>○ <a href="https://www.foundit.in/">Foundit</a></p>
-<p>○ <a href="https://apna.co/">Apna</a></p>
-<p>○ <a href="https://www.shine.com/">Shine </a>- Managed by the popular newspaper brand - HT Media Limited.</p>
-<p>○ <a href="https://mppsc.mp.gov.in/">MPPSC </a>(मध्य प्रदेश लोक सेवा आयोग)</p>
-<p>○ <a href="https://upsc.gov.in/">UPSC </a>(संघ लोक सेवा आयोग) </p>
-<p>○ <a href="https://www.timesjobs.com/">TimesJobs </a>- Managed by the Times Group.</p>
-<p>○ <a href="https://www.glassdoor.co.in/index.htm">Glassdoor</a></p>
-<p>○ <a href="https://www.freshersworld.com/">Freshersworld</a></p>
-<p>○ <a href="https://www.upwork.com/">Upwork</a></p>
-<p>○ <a href="https://www.jobsforher.com/">Jobsforher</a></p>
-<p>○ <a href="https://cutshort.io/">Cutshort</a></p>
-<p>○ <a href="https://in.jobsora.com/">Jobsora</a></p>
-<p>○ <a href="https://www.quikr.com/">Quikr</a></p>
-<p>○ <a href="https://www.hirist.com/">Hirist</a></p>
-<p>○ <a href="https://snaphunt.com/">Snaphunt</a></p>
-<p>○ <a href="https://in.jooble.org/">Jooble</a></p>
-<p>○ <a href="https://www.simplyhired.co.in/">Simplyhired</a></p>
-</div>
-<div id="wb_Text9">
-<br>
-</div>
-<div id="wb_Text21">
-<br>
-</div>
-<div id="wb_Text4">
-<p>Suggestions (Tips &amp; Tricks)</p>
-</div>
-<div id="wb_Text5">
-<p>○&nbsp;<a href="https://www.indeed.com/career-advice/finding-a-job/job-hunting">Job-Hunting Strategies</a></p>
-<p>○ <a href="https://www.freejobalert.com/">Free job alert</a></p>
-<p>○ <a href="https://www.cheggindia.com/govt-exams/">Chegg india govt exams</a></p>
-<p>○ <a href="https://byjus.com/govt-exams/">Byjus</a></p>
+<div id="wb_Text2">
+<span style="color:#000000;font-family:'Comic Neue';font-weight:700;font-size:32px;">Hi </span><span style="color:#000000;font-family:'Segoe UI Emoji';font-size:32px;">&#x1F44B;</span><span style="color:#000000;font-family:'Comic Neue';font-weight:700;font-size:32px;">, I'm Vikas Lawvanshi</span>
 </div>
 <div id="wb_Text6">
-<br>
+<span style="color:#000000;font-family:'Comic Neue';font-weight:300;font-size:13px;"><strong>&quot; Jack of all Trades, Master of Some &quot;</strong></span>
 </div>
+<div id="wb_Text4">
+<p style="font-weight:bold;">&nbsp;</p>
+<p style="font-weight:bold;">I'm a Medical Student <span style="font-family:Segoe UI Emoji;">👨‍⚕️</span> currently studying MBBS <span style="font-family:Segoe UI Emoji;font-size:16px;line-height:21.5px;">🩺</span> at Sri Aurobindo institute of medical science and PG institute, Indore (M.P.)<a href="https://www.saimsonline.com/redirect.php?page_id=17"><span style="font-weight:normal;">🔗</span></a></p>
+<p style="font-weight:bold;">&nbsp;</p>
 </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid13">
-<div id="LayoutGrid13">
+<div id="wb_LayoutGrid10">
+<div id="LayoutGrid10">
 <div class="row">
 <div class="col-1">
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid54">
-<div id="LayoutGrid54-overlay"></div>
-<div id="LayoutGrid54">
-<div class="row">
-<div class="col-1">
-<hr id="HorizontalLine5" style="display:block;width: 100%;z-index:49;">
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid55">
-<div id="LayoutGrid55">
-<div class="row">
-<div class="col-1">
-<div id="wb_Text15">
-<p>सूचना:-&nbsp; </p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid56">
-<div id="LayoutGrid56">
-<div class="row">
-<div class="col-1">
-<!-- editbox -->
-<iframe width='100%' height='100' src="https://docs.google.com/document/d/e/2PACX-1vQQskmg6fsADKeYV2qBIq3sw734tECQj_jWKtySJDGhcJ5zWrrbMYkuxWwoGPYHqbAn1d7TTKAV5w2V/pub?embedded=true"></iframe>
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid57">
-<div id="LayoutGrid57-overlay"></div>
-<div id="LayoutGrid57">
-<div class="row">
-<div class="col-1">
-<hr id="HorizontalLine6" style="display:block;width: 100%;z-index:52;">
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid58">
-<div id="LayoutGrid58">
-<div class="row">
-<div class="col-1">
-<div id="wb_LayoutGrid59">
-<div id="LayoutGrid59">
-<div class="row">
-<div class="col-1">
-<form name="SiteSearch2_form" id="SiteSearch2_form" role="search" accept-charset="UTF-8" onsubmit="return searchPage(features)"></form>
-<input type="text" id="SiteSearch2" style="display:block;width: 100%;height:26px;z-index:53;" name="SiteSearch1" value="" spellcheck="false" placeholder="Search this website" role="searchbox" form="SiteSearch2_form">
-</div>
-<div class="col-2">
-<input type="button" id="Button11" onclick="searchPage();return false;" name="Search" value="Search" style="display:block;width: 100%;;height:25px;z-index:54;">
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid60">
-<div id="LayoutGrid60">
-<div class="col-1">
-<div id="wb_Heading16" style="display:inline-block;width:100%;z-index:58;">
-<h2 id="Heading16">Connect With Us!</h2>
-</div>
-<div id="wb_ListView2" style="display:inline-block;width:100%;z-index:59;">
-<ul id="ListView2">
-   <li class="ui-li-has-icon ui-first-child"><a href="mailto:lodhasamajshikshafoundation@gmail.com" class="ui-state-default ui-btn"><img src="images/mail (Copy).png" class="ui-li-icon">Mail<p>lodhasamajshikshafoundation@gmail.com</p></a></li>
-   <li class="ui-li-has-icon"><a href="https://chat.whatsapp.com/INQZ8XYS4sRJtOxzzetpSV" class="ui-state-default ui-btn"><img src="images/pngegg (15).png" class="ui-li-icon">Whatsapp Community<p>Support and Suggestion group for Our Work</p></a></li>
-   <li class="ui-li-has-icon"><a href="https://goo.gl/maps/vtYLtvAhHP7qryH57" class="ui-state-default ui-btn"><img src="images/location logo (Copy).png" class="ui-li-icon">Location<p>18-20, Swapnil farm, Mirjapur, Tejaji nagar bypass, Indore, M.P. 452020.</p></a></li>
-   <li class="ui-li-has-icon"><a href="https://drive.google.com/drive/folders/18Dnk3wwV-YnWqxN3V11fM3bKlEPHB8Qr?usp=sharing" class="ui-state-default ui-btn"><img src="images/android (Copy).png" class="ui-li-icon">Android app<p>Download and Install our Android app</p></a></li>
-   <li class="ui-li-has-icon ui-last-child"><a href="./Lists.html" class="ui-state-default ui-btn"><img src="images/pngegg (6).png" class="ui-li-icon">Donation Reports/Lists<p>Detailed of Our Members, Donars, Volunteers</p></a></li>
+<ul id="SlideShow1" style="display:inline-block;position:relative;width:189px;height:89px;border-radius:0px;z-index:16;">
+<li><a href="images/my artwork1.jpg" data-rel=""><img class="image" loading="lazy" width="1920" height="910" src="images/my artwork1.jpg" alt="" title=""></a></li>
 </ul>
-</div>
-</div>
-<div class="col-2">
-<div id="wb_LayoutGrid61">
-<div id="LayoutGrid61">
-<div class="col-1">
-<div id="wb_Image22" style="display:inline-block;width:44px;height:40px;z-index:60;">
-<img src="images/call us.png" id="Image22" alt="" width="44" height="40">
-</div>
-</div>
-<div class="col-2">
-<div id="wb_Text13">
-<p>Contact Us</p>
+<div id="wb_Text9">
+<span style="color:#000000;font-family:'Segoe UI Emoji';font-size:15px;">🕵️‍♀️</span><span style="color:#000000;font-family:Arial;font-size:15px;"> I’m trying to develop the Creator/Healer within me. <br></span>
 </div>
 </div>
 </div>
 </div>
-<div id="wb_LayoutGrid62">
-<div id="LayoutGrid62">
+</div>
+<div id="wb_Text5">
+<span style="color:#000000;font-family:Arial;font-size:15px;"><br></span><span style="color:#000000;font-family:'Segoe UI Emoji';font-size:15px;">📚</span><span style="color:#000000;font-family:Arial;font-size:15px;"> I&#8217;m currently learning <strong>things related to Web development and App development as a hobby. <br></strong></span>
+</div>
+<div id="wb_LayoutGrid8">
+<div id="LayoutGrid8">
 <div class="row">
 <div class="col-1">
-<div id="wb_Image21" style="display:inline-block;width:65px;height:75px;z-index:62;">
-<img src="images/papa465 (Copy).png" id="Image21" alt="" width="65" height="82">
+<div id="wb_FontAwesomeIcon2" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:18;">
+<a href="https://t.me/+LjFv3xFcPI8wZmVl"><div id="FontAwesomeIcon2"><i class="fa fa-telegram"></i></div></a>
 </div>
+<div id="wb_FontAwesomeIcon4" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:19;">
+<a href="https://wa.me/916264390100?text=%EA%A7%81%F0%9F%9A%A9%E0%A4%9C%E0%A4%AF%E0%A4%B6%E0%A5%8D%E0%A4%B0%E0%A5%80%20%E0%A4%B0%E0%A4%BE%E0%A4%AE%F0%9F%9A%A9%EA%A7%82"><div id="FontAwesomeIcon4"><i class="fa fa-whatsapp"></i></div></a>
 </div>
-<div class="col-2">
-<div id="wb_Text16">
-<p>Ramgopal Lawvanshi</p>
+<div id="wb_FontAwesomeIcon3" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:20;">
+<a href="tel:+916264390100"><div id="FontAwesomeIcon3"><i class="fa fa-phone-square"></i></div></a>
 </div>
-<div id="wb_Text17">
-<p>अध्यक्ष&nbsp;</p>
-</div>
-<div id="wb_Text18">
-<p>+919893768188&nbsp; <a href="tel:+919893768188">🧲</a></p>
-</div>
-<div id="wb_Text19">
-<p>rglawvanshi@gmail.com</p>
+<div id="wb_Icon1" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:21;">
+<a href="tel:+916264390100"><div id="Icon1"><i class="fa fa-envelope-o"></i></div></a>
 </div>
 </div>
 </div>
 </div>
 </div>
-<div id="wb_LayoutGrid64">
-<div id="LayoutGrid64">
+<div id="wb_LayoutGrid9">
+<div id="LayoutGrid9">
 <div class="row">
 <div class="col-1">
-<div id="wb_Image27" style="display:inline-block;width:65px;height:66px;z-index:67;">
-<img src="WhatsApp Image 2023-10-01 at 2.48.44 PM (Copy).jpeg" id="Image27" alt="" width="65" height="72">
-</div>
-</div>
-<div class="col-2">
-<div id="wb_Text27">
-<p>Ramkishor Lowanshi </p>
-</div>
-<div id="wb_Text28">
-<p>सचिव</p>
-</div>
-<div id="wb_Text29">
-<p>+919826642707 <a href="tel:+919826642707 ">🧲</a></p>
-</div>
-<div id="wb_Text30">
-<p>rk.lovenshi@gmail.com</p>
+<div id="wb_Text7">
+<span style="color:#000000;font-family:'Zen Loop';font-size:20px;"><strong>&quot; I'm a Man of My Words, so you better talk Carefully and Thoughtfully. &quot;</strong></span>
 </div>
 </div>
 </div>
-</div>
-</div>
-<div id="wb_LayoutGrid65">
-<div id="LayoutGrid65">
-<div class="row">
-<div class="col-1">
-<div id="wb_Image24" style="display:inline-block;width:65px;height:71px;z-index:72;">
-<img src="WhatsApp Image 2023-10-01 at 2.40.26 PM (Copy).jpeg" id="Image24" alt="" width="65" height="77">
-</div>
-</div>
-<div class="col-2">
-<div id="wb_Text31">
-<p>Ramswaroop shastri</p>
-</div>
-<div id="wb_Text32">
-<p>कोषाध्यक्ष</p>
-</div>
-<div id="wb_Text33">
-<p>+917999980988&nbsp;<a href="tel:+917999980988 ">🧲</a></p>
-</div>
-<div id="wb_Text34">
-<p>ramshastri691@gmail.com</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid63">
-<div id="LayoutGrid63">
-<div class="row">
-<div class="col-1">
-<div id="wb_Icon71" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:98;">
-<a href="https://www.facebook.com/groups/213850319729929/?mibextid=NSMWBT"><div id="Icon71"><i class="fa fa-facebook"></i></div></a>
-</div>
-<div id="wb_Icon72" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:99;">
-<a href="https://chat.whatsapp.com/DSPMkFks8KyJSAf5yqnzA0"><div id="Icon72"><i class="fa fa-whatsapp"></i></div></a>
-</div>
-<div id="wb_Icon2" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:100;">
-<a href="https://whatsapp.com/channel/0029VaAh6dJIyPtMwZVazA3Y"><div id="Icon2"><i class="fa fa-whatsapp"></i></div></a>
-</div>
-<div id="wb_Icon4" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:101;">
-<a href="https://youtube.com/@Lodha-Samaj_Shiksha-Foundation"><div id="Icon4"><i class="fa fa-youtube"></i></div></a>
-</div>
-<div id="wb_Icon5" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:102;">
-<a href="https://goo.gl/maps/KQxdXSRqMKv3AspVA"><div id="Icon5"><i class="fa fa-map-marker"></i></div></a>
-</div>
-<div id="wb_Icon65" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:103;">
-<a href="https://www.reddit.com/r/lodhasamaj/"><div id="Icon65"><i class="fa fa-reddit-alien"></i></div></a>
-</div>
-<div id="wb_Icon66" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:104;">
-<a href="https://wa.link/s2gxfd"><div id="Icon66"><i class="fa fa-user-md"></i></div></a>
-</div>
-<div id="wb_Icon67" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:105;">
-<a href="mailto:lodhasamajshiksha@gmail.com"><div id="Icon67"><i class="fa fa-google-plus"></i></div></a>
-</div>
-<div id="wb_Icon68" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:106;">
-<a href="https://t.me/lodhasamaj21"><div id="Icon68"><i class="fa fa-telegram"></i></div></a>
-</div>
-<div id="wb_Icon69" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:107;">
-<a href="https://discord.gg/VFVHXX7d"><div id="Icon69"><i class="Icon69"></i></div></a>
-</div>
-<div id="wb_Icon70" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:108;">
-<a href="https://www.linkedin.com/in/lodha-samaj-shiksha-foundation-766804285"><div id="Icon70"><i class="fa fa-linkedin"></i></div></a>
 </div>
 </div>
 </div>
@@ -500,7 +262,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid95">
 <div class="row">
 <div class="col-1">
-<div id="wb_Text2">
+<div id="wb_Text21">
 <span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Copyright 2023 © Lodha Samaj Shiksha Foundation<br>All Rights Reserved<br>Designed, Developed &amp; Deployed by <a href="./The-Creator.html" class="style1" title="The Creator">Vikas Lawvanshi</a></span>
 </div>
 </div>
@@ -510,10 +272,8 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 
 <div id="preloader"></div>
 <script src="js/jquery-3.6.4.min.js"></script>
-<script src="js/jquery.ui.effect.min.js"></script>
-<script src="js/searchindex.js"></script>
-<script src="js/wb.sitesearch.min.js"></script>
-<script src="js/Job.js"></script>
+<script src="magnificpopup/jquery.magnific-popup.min.js"></script>
+<script src="js/The-Creator.js"></script>
 <script data-goatcounter="https://6264390100.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
