--- a/media.html
+++ b/media.html
@@ -5,39 +5,50 @@
 <title>Media</title>
 <meta name="description" content="लोधा समाज शिक्षा फाउंडेशन
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
-We are dedicated to empower people with the tools and knowledge they need to reach their full potential. " />
-<meta name="keywords" content="Lodha, Samaj, Shiksha, Foundation, Career, Lodhasamaj, Shikshafoundation, Lawvanshi, Lovevanshi, Lowanshi, Education, लोधा, समाज, शिक्षा, फाउंडेशन">
+We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
+">
+<meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation
+">
 <meta name="author" content="Vikas Lawvanshi">
 <meta name="robots" content="index, follow">
 <meta name="language" content="Hindi">
+<meta name="revisit-after" content="1 day">
 
-<!-- Open Graph / Facebook / Whatsapp -->
-<meta property="og:type" content="website" />
-<meta property="og:image" content="images/Artboard 521x530@1200x630.png">
+<meta property="og:title" content="Lodha Samaj Shiksha Foundation ">
+<meta property="og:description" content="लोधा समाज शिक्षा फाउंडेशन
+।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।। We are dedicated to empower people with the tools and knowledge they need to reach their full potential. ">
+<meta property="og:type" content="website">
+<meta property="og:image" content="images/Artboard 640xx.png">
 <meta property="og:image"itemprop="image"content="assets/icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="64x64" href="assets/favicon-64x64.png">
-    <link rel="icon" type="image/png" sizes="120x120" href="assets/favicon-120x120.png">
-    <link rel="icon" type="image/png" sizes="320x320" href="assets/favicon-320x320.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/favicon-500x.png">
-    <link rel="icon" type="image/png" sizes="750x750" href="assets/favicon-750x.png">
-    <link rel="icon" type="image/png" sizes="1000x1000" href="assets/favicon-1000x.png">
-<meta property="og:title" content="Lodha Samaj Shiksha Foundation" />
-<meta property="og:description" content="लोधा समाज शिक्षा फाउंडेशन
-।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
-We are dedicated to empower people with the tools and knowledge they need to reach their full potential. " />
-<meta property="og:image" content="images/Artboard 521x530@1200x630.png">
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="images/Artboard 521x530@1200x630.png">
-<meta property="twitter:title" content="Lodha Samaj Shiksha Foundation" />
-<meta property="twitter:description" content="लोधा समाज शिक्षा फाउंडेशन
-।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
-We are dedicated to empower people with the tools and knowledge they need to reach their full potential. " />
-<meta property="twitter:image" content="images/Artboard 521x530@1200x630.png">
-<meta name="twitter:image" content="images/Artboard 521x530@1200x630.png">
+    <link rel="icon" type="image/png" sizes="114x114" href="assets/Asset114x(Copy).png">
+    <link rel="icon" type="image/png" sizes="152x152" href="assets/Asset152x.png">
+    <link rel="icon" type="image/png" sizes="167x167" href="assets/Asset167x.png">
+	<link rel="icon" type="image/png" sizes="180x180" href="assets/Asset180x.png">
+	<link rel="icon" type="image/png" sizes="640x640" href="assets/Artboard 640xx.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Lodha Samaj Shiksha Foundation">
+<meta name="twitter:description" content="लोधा समाज शिक्षा फाउंडेशन
+।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।। We are dedicated to empower people with the tools and knowledge they need to reach their full potential.">
+<meta name="twitter:image" content="images/Artboard 640xx.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link href="16x16.png" rel="icon" sizes="16x16" type="image/png">
+<link href="32x32.png" rel="icon" sizes="32x32" type="image/png">
+<link href="64x64.png" rel="icon" sizes="64x64" type="image/png">
+<link href="120x120.png" rel="apple-touch-icon" sizes="120x120">
+<link href="320x320.png" rel="apple-touch-icon" sizes="320x320">
+<link href="Artboard 1@0.75x.png" rel="apple-touch-icon" sizes="643x654">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Yatra+One:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gotu:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Arya:400&subset=devanagari&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Comic+Neue:400,700,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Zen+Loop:400&subset=latin-ext&display=swap" rel="stylesheet">
+<link href="css/LN_phase13.css" rel="stylesheet">
+<link href="css/media.css" rel="stylesheet">
 
 </head>
 <body>
@@ -66,7 +77,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image1" style="display:inline-block;width:203px;height:201px;z-index:1;">
-<a href="./index.html"><img src="images/Asset 2@1.5x.png" id="Image1" alt="" width="203" height="202"></a>
+<a href="./index.html"><img src="images/Asset 2@1.5x.png" loading="lazy" id="Image1" alt="" width="203" height="202"></a>
 </div>
 <div id="wb_Text3">
 <p>।। एक कल्पवृक्ष, जो&nbsp; संभावनाओ को साकार करे ।।</p>
@@ -86,7 +97,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="upStickyLayer" style="position:fixed;text-align:center;left:auto;right:20px;top:auto;bottom:20px;width:58px;height:76px;z-index:11;">
 <div id="upStickyLayer_Container" style="width:58px;position:relative;margin-left:auto;margin-right:auto;text-align:left;">
 <div id="wb_Image4" style="position:absolute;left:0px;top:12px;width:58px;height:64px;z-index:5;">
-<a href="./header_masterpage.html#Bookmark1"><img src="images/Artboard 1@0.75x.png" id="Image4" alt="" width="58" height="59"></a></div>
+<a href="./header_masterpage.html#Bookmark1"><img src="images/Artboard 1@0.75x.png" loading="lazy" id="Image4" alt="" width="58" height="59"></a></div>
 <div id="wb_Icon3" style="position:absolute;left:16px;top:0px;width:27px;height:23px;text-align:center;z-index:6;">
 <a href="./header_masterpage.html#Bookmark1"><div id="Icon3"><i class="fa fa-arrow-circle-up"></i></div></a></div>
 </div>
@@ -125,7 +136,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <a href="javascript:void(0)" class="nav-link"><i class="fa fa-users fa-2x">&nbsp;</i><br>About&nbsp;&nbsp;Us<b class="arrow-down"></b></a>
 <input type="checkbox" id="ResponsiveMenu1-submenu-0">
 <ul role="menu">
-<li role="menuitem"><a href="./Who-We-Are.html" class="nav-link"><i class="fa fa-question-circle-o fa-2x">&nbsp;</i>Who&nbsp;We&nbsp;Are(History&nbsp;of&nbsp;Lodha)</a></li>
+<li role="menuitem"><a href="https://hi.wikipedia.org/wiki/%E0%A4%B2%E0%A5%8B%E0%A4%A7%E0%A4%BE" class="nav-link"><i class="fa fa-question-circle-o fa-2x">&nbsp;</i>Who&nbsp;We&nbsp;Are(History&nbsp;of&nbsp;Lodha)</a></li>
 <li role="menuitem"><a href="./vision&mission.html" class="nav-link"><i class="fa fa-hand-peace-o fa-2x">&nbsp;</i>Vision&amp;Mission</a></li>
 <li role="menuitem"><a href="./History-Journey.html" class="nav-link"><i class="fa fa-hourglass-end fa-2x">&nbsp;</i>History&nbsp;of&nbsp;Shiksha&nbsp;Foundation</a></li>
 <li role="menuitem"><a href="./media.html" class="nav-link"><i class="fa fa-file-image-o fa-2x">&nbsp;</i>Media</a></li>
@@ -191,7 +202,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image10" style="display:inline-block;width:100%;height:auto;z-index:15;">
-<a href="https://drive.google.com/drive/folders/1JCfYB_I-VXe8W62Pn6okj2PV3iFgenHe?usp=drive_link"><img src="images/ELEVATION 4.jpg" id="Image10" alt="" title="Proposed Bhawan Map by Abhishek Mohariya" width="890" height="501"></a>
+<a href="https://drive.google.com/drive/folders/1JCfYB_I-VXe8W62Pn6okj2PV3iFgenHe?usp=drive_link"><img src="images/ELEVATION 4.jpg" loading="lazy" id="Image10" alt="" title="Proposed Bhawan Map by Abhishek Mohariya" width="890" height="501"></a>
 </div>
 <div id="wb_Text20">
 <p>Proposed Bhawan Map by Abhishek Mohariya</p>
@@ -216,7 +227,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image3" style="display:inline-block;width:100%;height:auto;z-index:18;">
-<a href="https://drive.google.com/drive/folders/1_Zhhporw7DBvrmXLZ4E5dyROO4gKaoo0?usp=sharing"><img src="images/2018_05_29__20_37_36_1.jpg" id="Image3" alt="" title="2018" width="890" height="668"></a>
+<a href="https://drive.google.com/drive/folders/1_Zhhporw7DBvrmXLZ4E5dyROO4gKaoo0?usp=sharing"><img src="images/2018_05_29__20_37_36_1.jpg" loading="lazy" id="Image3" alt="" title="2018" width="890" height="668"></a>
 </div>
 <div id="wb_Text4">
 <p>2018</p>
@@ -241,7 +252,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image5" style="display:inline-block;width:100%;height:auto;z-index:21;">
-<a href="https://drive.google.com/drive/folders/1h8BBoW-70q7bqT7TKbhNFp07GDsG-YNf?usp=sharing"><img src="images/2019_05_09__13_04_57_1.jpg" id="Image5" alt="" title="Proposed Bhawan Map by Abhishek Mohariya" width="890" height="421"></a>
+<a href="https://drive.google.com/drive/folders/1h8BBoW-70q7bqT7TKbhNFp07GDsG-YNf?usp=sharing"><img src="images/2019_05_09__13_04_57_1.jpg" loading="lazy" id="Image5" alt="" title="Proposed Bhawan Map by Abhishek Mohariya" width="890" height="421"></a>
 </div>
 <div id="wb_Text8">
 <p>2019</p>
@@ -266,7 +277,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image6" style="display:inline-block;width:100%;height:auto;z-index:24;">
-<a href="https://drive.google.com/drive/folders/1gmuZGBEVqR_KwztuUJybblh9Sl63lLxk?usp=sharing"><img src="images/2020_02_24__09_11_49_1.jpg" id="Image6" alt="" title="2020" width="890" height="668"></a>
+<a href="https://drive.google.com/drive/folders/1gmuZGBEVqR_KwztuUJybblh9Sl63lLxk?usp=sharing"><img src="images/2020_02_24__09_11_49_1.jpg" loading="lazy" id="Image6" alt="" title="2020" width="890" height="668"></a>
 </div>
 <div id="wb_Text10">
 <p>2020</p>
@@ -291,7 +302,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image7" style="display:inline-block;width:100%;height:auto;z-index:27;">
-<a href="https://drive.google.com/drive/folders/1WEnvslokiYc_FuxHyPIVwvP2G5aQdEqw?usp=sharing"><img src="images/2021_03_08__00_11_49_25.jpg" id="Image7" alt="" title="2021" width="890" height="401"></a>
+<a href="https://drive.google.com/drive/folders/1WEnvslokiYc_FuxHyPIVwvP2G5aQdEqw?usp=sharing"><img src="images/2021_03_08__00_11_49_25.jpg" loading="lazy" id="Image7" alt="" title="2021" width="890" height="401"></a>
 </div>
 <div id="wb_Text12">
 <p>2021</p>
@@ -316,7 +327,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image8" style="display:inline-block;width:100%;height:auto;z-index:30;">
-<a href="https://drive.google.com/drive/folders/15buwrqG2oBJiOrw5GSAoXDjl41rNuH6c?usp=sharing"><img src="images/2022_05_04__08_38_50_8.jpg" id="Image8" alt="" title="2022" width="890" height="668"></a>
+<a href="https://drive.google.com/drive/folders/15buwrqG2oBJiOrw5GSAoXDjl41rNuH6c?usp=sharing"><img src="images/2022_05_04__08_38_50_8.jpg" loading="lazy" id="Image8" alt="" title="2022" width="890" height="668"></a>
 </div>
 <div id="wb_Text14">
 <p>2022</p>
@@ -341,7 +352,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image2" style="display:inline-block;width:100%;height:auto;z-index:33;">
-<a href="https://youtu.be/YaxvqjrLuiY"><img src="images/vlcsnap-2023-07-30-18h03m52s629.png" id="Image2" alt="" title="Bhumi pujan" width="890" height="501"></a>
+<a href="https://youtu.be/YaxvqjrLuiY"><img src="images/vlcsnap-2023-07-30-18h03m52s629.png" loading="lazy" id="Image2" alt="" title="Bhumi pujan" width="890" height="501"></a>
 </div>
 <div id="wb_Text6">
 <p>भूमि पूजन 2023</p>
@@ -366,7 +377,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_YouTube1" style="display:inline-block;width:100%;z-index:36;">
-<iframe id="YouTube1" src="https://www.youtube.com/embed/YaxvqjrLuiY?rel=0&amp;enablejsapi=1&amp;autohide=0"></iframe>
+<iframe id="YouTube1" src="https://www.youtube.com/embed/YaxvqjrLuiY?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
 
 </div>
 </div>
@@ -394,7 +405,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image9" style="display:inline-block;width:100%;height:auto;z-index:37;">
-<a href="https://drive.google.com/drive/folders/12VSoLZNW-Fo0d9yAWSSXoaYN2RapIqdI?usp=sharing"><img src="images/IMG-20230815-WA0014.jpg" id="Image9" alt="" title="2023" width="890" height="549"></a>
+<a href="https://drive.google.com/drive/folders/12VSoLZNW-Fo0d9yAWSSXoaYN2RapIqdI?usp=sharing"><img src="images/IMG-20230815-WA0014.jpg" loading="lazy" id="Image9" alt="" title="2023" width="890" height="549"></a>
 </div>
 <div id="wb_Text16">
 <p>2023</p>
@@ -631,25 +642,13 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Text25">
-<span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Copyright 2023 © Lodha Samaj Shiksha Foundation<br>All Rights Reserved<br>Designed, Developed &amp; Deployed by Vikas Lawvanshi</span>
+<span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Copyright 2023 © Lodha Samaj Shiksha Foundation<br>All Rights Reserved<br>Designed, Developed &amp; Deployed by <a href="./The-Creator.html" class="style1" title="The Creator">Vikas Lawvanshi</a></span>
 </div>
 </div>
 </div>
 </div>
 </div>
-<link href="16x16.png" rel="icon" sizes="16x16" type="image/png">
-<link href="32x32.png" rel="icon" sizes="32x32" type="image/png">
-<link href="64x64.png" rel="icon" sizes="64x64" type="image/png">
-<link href="120x120.png" rel="apple-touch-icon" sizes="120x120">
-<link href="320x320.png" rel="apple-touch-icon" sizes="320x320">
-<link href="Artboard 1@0.75x.png" rel="apple-touch-icon" sizes="643x654">
-<link href="css/font-awesome.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Yatra+One:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Gotu:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Arya:400&subset=devanagari&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
-<link href="css/LN_phase12.css" rel="stylesheet">
-<link href="css/media.css" rel="stylesheet">
+
 <div id="preloader"></div>
 <script src="js/jquery-3.6.4.min.js"></script>
 <script src="js/jquery.ui.effect.min.js"></script>
