--- a/The-Creator.html
+++ b/The-Creator.html
@@ -238,7 +238,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <a href="tel:+916264390100"><div id="FontAwesomeIcon3"><i class="fa fa-phone-square"></i></div></a>
 </div>
 <div id="wb_Icon1" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:21;">
-<a href="tel:+916264390100"><div id="Icon1"><i class="fa fa-envelope-o"></i></div></a>
+<a href="mailto:vikaslawvanshi26@gmail.com"><div id="Icon1"><i class="fa fa-envelope-o"></i></div></a>
 </div>
 </div>
 </div>
