--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <link rel="stylesheet" href="magnificpopup/magnific-popup.css">
 <link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css">
 
-
+<!-- Clarity tracking code for https://lodhasamajshikshafoundation.netlify.app/ --><script>    (function(c,l,a,r,i,t,y){        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);    })(window, document, "clarity", "script", "j6gu2qg8e2");</script>
 
 </head>
 <body>
