--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 
 <meta name="google-site-verification" content="MRJ1ONHv8O_YKmwVnGFL8de5Wlx1bciOasAqnQ9Mipc" />
 <!-- Insert Google Analytics code here -->
-
+<meta name="yandex-verification" content="3beaa3efd4337d6d" />
 
 
 
