--- a/The-Creator.html
+++ b/The-Creator.html
@@ -50,6 +50,9 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <link href="css/LN_phase13.css" rel="stylesheet">
 <link href="css/The-Creator.css" rel="stylesheet">
 <link rel="stylesheet" href="magnificpopup/magnific-popup.css">
+
+<meta name="google-site-verification" content="MRJ1ONHv8O_YKmwVnGFL8de5Wlx1bciOasAqnQ9Mipc" />
+	
 </head>
 <body>
 <div id="wb_LayoutGrid1">
