--- a/Committee.html
+++ b/Committee.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Committee</title>
+<title>Contact Us</title>
 <meta name="description" content="लोधा समाज शिक्षा फाउंडेशन
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
 We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
@@ -175,7 +175,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <li role="menuitem"><a href="./Other-Tools.html" class="nav-link"><i class="fa fa-pied-piper-alt fa-2x">&nbsp;</i>Others</a></li>
 </ul>
 </li>
-<li role="menuitem"><a href="./Committee.html" class="nav-link"><i class="fa fa-address-card-o fa-2x">&nbsp;</i><br>Committee</a></li>
+<li role="menuitem"><a href="./Committee.html" class="nav-link"><i class="fa fa-address-card-o fa-2x">&nbsp;</i><br>Contact&nbsp;Us</a></li>
 </ul>
 
 </div>
@@ -202,7 +202,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading7" style="display:inline-block;width:100%;z-index:15;">
-<h2 id="Heading7"><a href="./Committee.html">Committee / समिति</a></h2>
+<h2 id="Heading7"><a href="./Committee.html">Help Providers / संपर्क सूत्र</a></h2>
 </div>
 </div>
 </div>
@@ -328,6 +328,29 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="col-1">
 <div id="wb_Heading39" style="display:inline-block;width:100%;z-index:53;">
 <h2 id="Heading39"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTx_KvJp8yEVE2S-Ybf9ynN5OeH38I4DaUDHWi6zryhnAKFfwstzPVLxLo9IMfQHJu3Lo8638sl_LEa/pubhtml?gid=1551270807&single=true">जिलेवार प्रबंध कार्यकारिणी </a></h2>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="wb_LayoutGrid17">
+<div id="LayoutGrid17">
+<div class="row">
+<div class="col-1">
+<div id="wb_LayoutGrid19">
+<div id="LayoutGrid19">
+<div class="row">
+<div class="col-1">
+<div id="wb_Heading3" style="display:inline-block;width:100%;z-index:55;">
+<h2 id="Heading3"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQI0R17_tBRTsWqeLj0Qae4t79WcR_kQ9ej-GvM6Gz-58Ta6euS0cnneOMbnMq2QGe9b6OyeUko_fni/pubhtml">अन्य व्यावसायिक / तकनीकी / पेशेवर </a></h2>
 </div>
 </div>
 </div>
