--- a/Committee.html
+++ b/Committee.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Contact Us</title>
+<title>Committee</title>
 <meta name="description" content="लोधा समाज शिक्षा फाउंडेशन
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
 We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
