--- a/The-Creator.html
+++ b/The-Creator.html
@@ -194,11 +194,11 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_LayoutGrid7">
 <div id="LayoutGrid7">
 <div class="col-1">
-<div id="wb_Image3" style="display:inline-block;width:100%;height:auto;z-index:15;">
-<img src="images/dp1000x.png" loading="lazy" id="Image3" alt="" width="293" height="432">
-</div>
 </div>
 <div class="col-2">
+<div id="wb_Image3" style="display:inline-block;width:100%;height:auto;z-index:22;">
+<img src="images/dp1000x.png" loading="lazy" id="Image3" alt="" width="778" height="1146">
+</div>
 <div id="wb_Text2">
 <span style="color:#000000;font-family:'Comic Neue';font-weight:700;font-size:32px;">Hi </span><span style="color:#000000;font-family:'Segoe UI Emoji';font-size:32px;">&#x1F44B;</span><span style="color:#000000;font-family:'Comic Neue';font-weight:700;font-size:32px;">, I'm Vikas Lawvanshi</span>
 </div>
@@ -214,8 +214,8 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid10">
 <div class="row">
 <div class="col-1">
-<ul id="SlideShow1" style="display:inline-block;position:relative;width:189px;height:89px;border-radius:0px;z-index:16;">
-<li><a href="images/my artwork1.jpg" data-rel=""><img class="image" loading="lazy" width="1363" height="909" src="images/my artwork1.jpg" alt="" title=""></a></li>
+<ul id="SlideShow1" style="display:inline-block;position:relative;width:189px;height:106px;border-radius:0px;z-index:15;">
+<li><a href="images/my artwork2.jpg" data-rel=""><img class="image" loading="lazy" width="1601" height="900" src="images/my artwork2.jpg" alt="" title=""></a></li>
 </ul>
 <div id="wb_Text9">
 <span style="color:#000000;font-family:'Segoe UI Emoji';font-size:15px;">🕵️‍♀️</span><span style="color:#000000;font-family:Arial;font-size:15px;"> I’m trying to develop the Creator/Healer within me. <br></span>
@@ -231,17 +231,17 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid8">
 <div class="row">
 <div class="col-1">
-<div id="wb_FontAwesomeIcon2" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:18;">
+<div id="wb_FontAwesomeIcon2" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:17;">
 <a href="https://t.me/+LjFv3xFcPI8wZmVl"><div id="FontAwesomeIcon2"><i class="fa fa-telegram"></i></div></a>
 </div>
-<div id="wb_FontAwesomeIcon4" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:19;">
+<div id="wb_FontAwesomeIcon4" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:18;">
 <a href="https://wa.me/916264390100?text=%EA%A7%81%F0%9F%9A%A9%E0%A4%9C%E0%A4%AF%E0%A4%B6%E0%A5%8D%E0%A4%B0%E0%A5%80%20%E0%A4%B0%E0%A4%BE%E0%A4%AE%F0%9F%9A%A9%EA%A7%82"><div id="FontAwesomeIcon4"><i class="fa fa-whatsapp"></i></div></a>
 </div>
-<div id="wb_FontAwesomeIcon3" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:20;">
+<div id="wb_FontAwesomeIcon3" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:19;">
 <a href="tel:+916264390100"><div id="FontAwesomeIcon3"><i class="fa fa-phone-square"></i></div></a>
 </div>
-<div id="wb_Icon1" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:21;">
-<a href="mailto:vikaslawvanshi26@gmail.com"><div id="Icon1"><i class="fa fa-envelope-o"></i></div></a>
+<div id="wb_Icon1" style="display:inline-block;width:40px;height:40px;text-align:center;z-index:20;">
+<a href="tel:+916264390100"><div id="Icon1"><i class="fa fa-envelope-o"></i></div></a>
 </div>
 </div>
 </div>
