--- a/The-Creator.html
+++ b/The-Creator.html
@@ -7,7 +7,7 @@
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
 We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
 ">
-<meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation
+<meta name="keywords" content="Vikas Lawvanshi, Vikas Lowanshi, Vikas Lovevanshi, Vikas Lovanshi, Vikas Lodha, Vikas, Lodha Samaj, Shiksha Foundation, Lodha Samaj Shiksha Foundation
 ">
 <meta name="author" content="Vikas Lawvanshi">
 <meta name="robots" content="index, follow">
