--- a/Developer-tools.html
+++ b/Developer-tools.html
@@ -7,7 +7,7 @@
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
 We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
 ">
-<meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation
+<meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation, Ramgopal Lawvanshi
 ">
 <meta name="author" content="Vikas Lawvanshi">
 <meta name="robots" content="index, follow">
@@ -291,7 +291,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://weboas.is/media/host.png" rel="nofollow" target="_blank">How-to Host Questionable Websites</a> - <em>Guide / <a href="https://weboas.is/media/host.pdf" rel="nofollow" target="_blank">PDF</a></em></p>
         <p>○&nbsp;<a href="http://learncssgrid.com/" rel="nofollow" target="_blank">LearnCSSGrid</a> - <em>CSS Grid Guide</em></p>
         <p>○&nbsp;Comic Lessons - <a href="https://howdns.works/" rel="nofollow" target="_blank">DNS</a> / <a href="https://howdnssec.works/" rel="nofollow" target="_blank">DNSSEC</a> / <a href="https://howhttps.works/" rel="nofollow" target="_blank">HTTPS</a> </p>
-    >
 <br>
 </div>
 </div>
@@ -406,7 +405,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://github.com/curl/curl" rel="nofollow" target="_blank">cURL</a> - <em>Transfer Data with URLs</em> </p>
         <p>○&nbsp;<a href="http://detexify.kirelabs.org/classify.html" rel="nofollow" target="_blank">Detexify</a> - <em>Handwritten LaTeX Symbol Recognition</em> </p>
         <p>○&nbsp;<a href="https://booster.js.org/" rel="nofollow" target="_blank">Booster</a> - <em>Website Performance / Speed Optimizer</em> </p>
-   >
 <br>
 </div>
 </div>
@@ -494,7 +492,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://github.com/tsenart/sight" rel="nofollow" target="_blank">Sight</a> - <em>Syntax Highlighter for Chrome</em> </p>
         <p>○&nbsp;<a href="https://website.grader.com/" rel="nofollow" target="_blank">Website Grader</a> - <em>Website Grading Tool</em></p>
         <p>○&nbsp;<a href="https://ngrok.com/" rel="nofollow" target="_blank">ngrok</a> - <em>Introspectable Tunnels to Localhost Tools</em></p>
-   >
 <br>
 </div>
 </div>
@@ -566,7 +563,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <a href="https://www.pagely.site/" rel="nofollow" target="_blank">Pagely</a>, 
                 <a href="https://mobirise.com/" rel="nofollow" target="_blank">Mobirise</a></p>
         </p>
-   >
 <br>
 </div>
 </div>
@@ -638,7 +634,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <a href="https://github.com/gildas-lormeau/SingleFileZ" rel="nofollow" target="_blank">SingleFileZ</a>,
             <a href="https://archive.ph/" rel="nofollow" target="_blank">archive.ph</a>.
         </p>
-   >
 <br>
 </div>
 </div>
@@ -683,7 +678,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://github.com/milesmcc/shynet" rel="nofollow" target="_blank">Shynet</a> - <i>Modern, privacy-friendly, and detailed web analytics that works without cookies or JS.</i></p>
         <p>○&nbsp;<a href="https://pirsch.io/" rel="nofollow" target="_blank">Pirsch</a> - <i>Pirsch is a simple, privacy-friendly, open-source alternative to Google Analytics.</i></p>
         <p>○&nbsp;<a href="https://onsitejs.org/" rel="nofollow" target="_blank">OnSiteJS</a> - <i>Privacy-conscious web analytics.</i></p>
-   >
 <br>
 </div>
 </div>
@@ -773,7 +767,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.freewebhostingarea.com" rel="nofollow" target="_blank">freewebhostingarea</a></p>
         <p>○&nbsp;<a href="https://drv.tw/" rel="nofollow" target="_blank">DriveToWeb</a></p>
         <p>○&nbsp;<a href="http://freenom.com/" rel="nofollow" target="_blank">freenom</a></p>
-   >
 <br>
 </div>
 </div>
@@ -818,7 +811,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://codeberg.org/" rel="nofollow" target="_blank">Codeberg</a></p>
         <p>○&nbsp;<a href="https://www.gitea.com/" rel="nofollow" target="_blank">Gitea</a></p>
         <p>○&nbsp;<a href="https://notabug.org/" rel="nofollow" target="_blank">Not A Bug</a></p>
-  >
 <br>
 </div>
 </div>
@@ -861,7 +853,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://rada.re/r/" rel="nofollow" target="_blank">Radare</a> or <a href="https://github.com/rizinorg/cutter" rel="nofollow" target="_blank">Cutter</a> - <em>Reverse Engineering Framework</em> </p>
         <p>○&nbsp;<a href="https://readthedocs.org/" rel="nofollow" target="_blank">Read the Docs</a> - <em>Make Documentation for your Software</em></p>
         <p>○&nbsp;<a href="https://jrsoftware.org/isinfo.php" rel="nofollow" target="_blank">Inno Setup</a> - <em>Windows Program Installer</em></p>
-   >
 <br>
 </div>
 </div>
@@ -906,7 +897,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.electronjs.org/apps/debugtron" rel="nofollow" target="_blank">Debugtron</a> - <em>Electron App Debugger</em></p>
         <p>○&nbsp;<a href="https://github.com/fuzz-security/MobileApp-Pentest-Cheatsheet" rel="nofollow" target="_blank">MobileApp-Pentest-Cheatsheet</a> - <em>Mobile App Penetration Test Index</em></p>
         <p>○&nbsp;<a href="https://pm2.keymetrics.io/" rel="nofollow" target="_blank">PM2</a> - <em>Process Manager</em></p>
-   >
 <br>
 </div>
 </div>
@@ -950,7 +940,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://phaser.io/" rel="nofollow" target="_blank">Phaser</a> - <em>Mobile HTML5 Game Framework</em> </p>
         <p>○&nbsp;<a href="https://playcanvas.com/" rel="nofollow" target="_blank">PlayCanvas</a> - <em>Build HTML5 Visualizations / Games</em> </p>
         <p>○&nbsp;<a href="https://curlie.org/en/Games/Roleplaying/World_Building" rel="nofollow" target="_blank">Curlie World Building</a> - <em>World Building Resource Index</em> </p>
-  >
 <br>
 </div>
 </div>
@@ -1017,7 +1006,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://addons.mozilla.org/en-US/firefox/addon/markdown-editor-premium/" rel="nofollow" target="_blank">Markdown Editor for Firefox</a> - <em>Markdown Editor Extension</em> </p>
         <p>○&nbsp;<a href="https://markdowntohtml.com/" rel="nofollow" target="_blank">Markdown To HTML</a> - <em>Markdown to HTML Converter</em></p>
         <p>○&nbsp;<a href="https://obsidian.md/" rel="nofollow" target="_blank">Obsidian</a> - <em>Markdown File Organizer</em><br /></p>
-  >
 <br>
 </div>
 </div>
@@ -1082,7 +1070,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://shields.io/" rel="nofollow" target="_blank">Shields.io</a> - <em>Metadata badges for Github Readmes</em></p>
         <p>○&nbsp;<a href="https://dev.to/mishmanners/how-to-enable-github-actions-on-your-profile-readme-for-a-contribution-graph-4l66" rel="nofollow" target="_blank">GitHub Snake</a> - <em>Enable Snake Game on GitHub ReadMe</em></p>
         <p>○&nbsp;<a href="https://github.com/montylion/discord-md-badge" rel="nofollow" target="_blank">Discord MD Badge</a> - <em>Add Discord Badge to GitHub</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1139,7 +1126,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p><strong>Extensions</strong></p>
             <p><a href="https://chrome.google.com/webstore/detail/seo-minion/giihipjfimkajhlcilipnjeohabimjhi?utm_source=chrome-ntp-icon" rel="nofollow" target="_blank">SEO Minion</a> or <a href="https://chrome.google.com/webstore/detail/ubersuggest-seo-and-keywo/nmpgaoofmjlimabncmnmnopjabbflegf" rel="nofollow" target="_blank">ubersuggest</a></p>
         </p>
->
 <br>
 </div>
 </div>
@@ -1180,7 +1166,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://gitlab.com/gokhanettin/wnix" rel="nofollow" target="_blank">WNIX</a> - <em>UNIX-like Windows Development Environment</em></p>
         <p>○&nbsp;<a href="https://sift-tool.org/" rel="nofollow" target="_blank">Sift</a> - <em>grep Alternative</em></p>
         <p>○&nbsp;<a href="http://edbrowse.org/" rel="nofollow" target="_blank">Edbrowse</a> - <em>Command Line Editor / Browser / Mail Client</em></p>
-    >
 <br>
 </div>
 </div>
@@ -1225,7 +1210,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://yash.osdn.jp/" rel="nofollow" target="_blank">yash</a></p>
         <p>○&nbsp;<a href="https://xon.sh/" rel="nofollow" target="_blank">xonsh</a></p>
         <p>○&nbsp;<a href="https://github.com/nushell/nushell" rel="nofollow" target="_blank">nushell</a></p>
- >
 <br>
 </div>
 </div>
@@ -1270,7 +1254,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://github.com/joowani/colorpediahttps://coolors.co/" rel="nofollow" target="_blank">Colorpedia</a> - <em>Lookup Colors &amp; Palettes via Command-Line</em> </p>
         <p>○&nbsp;<a href="https://www.shadertoy.com/browse" rel="nofollow" target="_blank">ShaderToy</a> - <em>User-Made Shaders</em> </p>
         <p>○&nbsp;<a href="https://webaim.org/resources/contrastchecker/" rel="nofollow" target="_blank">Contrast Checker</a> - <em>Background / Text Contrast Checker</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1349,7 +1332,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://jsonformatter.curiousconcept.com/" rel="nofollow" target="_blank">JSON Formatter</a> or <a href="https://github.com/callumlocke/json-formatter" rel="nofollow" target="_blank">json-formatter</a> - <em>JSON Formatter</em> </p>
         <p>○&nbsp;<a href="https://glogg.bonnefon.org/" rel="nofollow" target="_blank">glogg</a> - <em>Log File Explorer</em></p>
         <p>○&nbsp;<a href="https://carbon.now.sh/" rel="nofollow" target="_blank">Carbon</a> - <em>Source Code Screenshots</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1428,7 +1410,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <a href="https://jsfiddle.net/" rel="nofollow" target="_blank">JSFiddle</a>, 
             <a href="https://playcode.io/" rel="nofollow" target="_blank">PlayCode</a> </p>
         </p>
-   >
 <br>
 </div>
 </div>
@@ -1479,7 +1460,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://codepen.io/" rel="nofollow" target="_blank">CodePen</a> - <em>Code Sandbox</em> </p>
         <p>○&nbsp;<a href="https://tio.run/" rel="nofollow" target="_blank">tio.run</a> - <em>Programming Language Interpreters</em> </p>
         <p>○&nbsp;<a href="https://www.onlinegdb.com/online_python_compiler" rel="nofollow" target="_blank">Online Python Compiler</a> - <em>Online Python Editor &amp; Tester</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1527,7 +1507,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.jojo-themes.net/" rel="nofollow" target="_blank">jojo-themes</a></p>
         <p>○&nbsp;<a href="https://babiato.co/" rel="nofollow" target="_blank">babiato</a></p>
         <p>○&nbsp;<a href="https://newtemplate.net/" rel="nofollow" target="_blank">newtemplate</a></p>
-   >
 <br>
 </div>
 </div>
@@ -1574,7 +1553,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://deviceframes.com" rel="nofollow" target="_blank">Deviceframes</a></p>
         <p>○&nbsp;<a href="https://angle.sh" rel="nofollow" target="_blank">Angle</a></p>
         <p>○&nbsp;<a href="https://animockup.com" rel="nofollow" target="_blank">Animockup</a></p>
->
 <br>
 </div>
 </div>
@@ -1638,7 +1616,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://devdocs.io/" rel="nofollow" target="_blank">DevDocs</a> - <em>API Documentation</em></p>
         <p>○&nbsp;<a href="https://redd.it/hxdbau" rel="nofollow" target="_blank">Programming Directories</a> </p>
         <p>○&nbsp;<a href="https://g.sicp.me/books/" rel="nofollow" target="_blank">#/g/sicp</a> - <em>Programming / Computer Science / Tech Books (35gb Torrent)</em> </p>
-   >
 <br>
 </div>
 </div>
@@ -1781,7 +1758,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
    <li class="ui-li-has-icon ui-first-child"><a href="mailto:lodhasamajshikshafoundation@gmail.com" class="ui-state-default ui-btn"><img src="images/mail (Copy).png" class="ui-li-icon">Mail<p>lodhasamajshikshafoundation@gmail.com</p></a></li>
    <li class="ui-li-has-icon"><a href="https://chat.whatsapp.com/INQZ8XYS4sRJtOxzzetpSV" class="ui-state-default ui-btn"><img src="images/pngegg (15).png" class="ui-li-icon">Whatsapp Community<p>Support and Suggestion group for Our Work</p></a></li>
    <li class="ui-li-has-icon"><a href="https://goo.gl/maps/vtYLtvAhHP7qryH57" class="ui-state-default ui-btn"><img src="images/location logo (Copy).png" class="ui-li-icon">Location<p>18-20, Swapnil farm, Mirjapur, Tejaji nagar bypass, Indore, M.P. 452020.</p></a></li>
-   <li class="ui-li-has-icon"><a href="https://drive.google.com/drive/folders/18Dnk3wwV-YnWqxN3V11fM3bKlEPHB8Qr?usp=sharing" class="ui-state-default ui-btn"><img src="images/android (Copy).png" class="ui-li-icon">Android app<p>Download and Install our Android app</p></a></li>
+   <li class="ui-li-has-icon"><a href="https://play.google.com/store/apps/details?id=com.shikshafoundation.app" class="ui-state-default ui-btn"><img src="images/android (Copy).png" class="ui-li-icon">Android app<p>Download and Install our Android app</p></a></li>
    <li class="ui-li-has-icon ui-last-child"><a href="./Lists.html" class="ui-state-default ui-btn"><img src="images/pngegg (6).png" class="ui-li-icon">Donation Reports/Lists<p>Detailed of Our Members, Donars, Volunteers</p></a></li>
 </ul>
 </div>
