--- a/OS-tools.html
+++ b/OS-tools.html
@@ -1067,7 +1067,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
               target="_blank"
               >Mac Address Video Archive</a
             >
-          </p>>
+          </p>
 <br>
 </div>
 </div>
@@ -1188,7 +1188,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
               >spotify-adblock-macos</a
             >
             - <em>Mac Spotify Adblocker</em>
-          </p>>
+          </p>
 <br>
 </div>
 </div>
@@ -1370,7 +1370,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
               >Adobe Zii</a
             >
             - <em>Adobe CC Patcher</em>
-          </p>>
+          </p>
 <br>
 </div>
 </div>
@@ -1491,7 +1491,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
               >rbxfpsunlocker</a
             >
             - <em>Roblox FPS Unlocker</em>
-          </p>>
+          </p>
 <br>
 </div>
 </div>
@@ -1537,7 +1537,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
       <p>○&nbsp;<a href="https://distrowatch.com/dwres.php?resource=popularity" rel="nofollow" target="_blank">DistroWatch</a></p>
       <p>○&nbsp;<a href="https://computefreely.org/" rel="nofollow" target="_blank">ComputerFreely</a></p>
       <p>○&nbsp;<a href="https://devuan.org/os/free-software" rel="nofollow" target="_blank">Devuan</a></p>
-      <p>○&nbsp;<a href="https://antixlinux.com/" rel="nofollow" target="_blank">AntiXLinux</a></p>>
+      <p>○&nbsp;<a href="https://antixlinux.com/" rel="nofollow" target="_blank">AntiXLinux</a></p>
 <br>
 </div>
 </div>
@@ -2054,7 +2054,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         >DuckieTV</a
       >
       - <em>TV Tracker / Torrent Downloader</em>
-    </p>>
+    </p>
 <br>
 </div>
 </div>
